# xiaomi-mitv-remote-linux-kiosk

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  LICENSE  README.md  SECURITY.md  SUPPORT.md  pyproject.toml
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  feature_request.yml  hardware_validation.yml
.github/workflows/: ci.yml
docs/: README.ru.md  api.md  compatibility.md  hardware-submission.md  hardware-validation.md  security.md  troubleshooting.md  udev-non-root.md
examples/: mi-remote-keymap.example.json
examples/integration/linux-tv-kiosk-shell/: README.md
examples/reports/: hardware-submission.example.json  hardware-submission.example.md  hardware-validation-report.example.json
examples/static-html-kiosk/: index.html
examples/systemd/: linux-kiosk-remote-input.service  linux-kiosk-remote-status.service
examples/udev/: 99-xiaomi-mitv-remote.rules.example
profiles/: generic-bluetooth-hid-remote.profile.json  xiaomi-mitv-remote.profile.json
scripts/: repo_quality_gate.sh  smoke_test.sh
src/linux_kiosk_remote/: __init__.py  capture.py  cli.py  common.py  doctor.py  input_daemon.py  keymap.py  lab.py  profiles.py  setup_wizard.py  status_exporter.py  submission.py
tests/: test_common.py
