[project]
name = "xiaomi-mitv-remote-linux-kiosk"
version = "0.2.7"
description = "Xiaomi/MiTV Bluetooth remote SDK for Linux kiosks"
readme = "README.md"
requires-python = ">=3.10"
license = {text = "MIT"}
authors = [{name = "Linux Kiosk Remote contributors"}]
keywords = ["xiaomi", "mitv", "android-tv", "linux", "kiosk", "bluetooth", "remote", "input", "evdev"]
classifiers = [
  "Programming Language :: Python :: 3",
  "License :: OSI Approved :: MIT License",
  "Operating System :: POSIX :: Linux",
]
dependencies = []

[project.scripts]
xiaomi-remote = "linux_kiosk_remote.cli:main"
xiaomi-mitv-remote-input = "linux_kiosk_remote.input_daemon:main"
xiaomi-mitv-remote-status = "linux_kiosk_remote.status_exporter:main"
xiaomi-mitv-remote-capture = "linux_kiosk_remote.capture:main"
xiaomi-mitv-remote-setup = "linux_kiosk_remote.setup_wizard:main"
xiaomi-mitv-remote-doctor = "linux_kiosk_remote.doctor:main"
xiaomi-mitv-remote-profiles = "linux_kiosk_remote.profiles:main"
xiaomi-mitv-remote-lab = "linux_kiosk_remote.lab:main"

[project.urls]
Homepage = "https://github.com/YURII-YURII86/xiaomi-mitv-remote-linux-kiosk"
Repository = "https://github.com/YURII-YURII86/xiaomi-mitv-remote-linux-kiosk"
Issues = "https://github.com/YURII-YURII86/xiaomi-mitv-remote-linux-kiosk/issues"

